# ADHTEB

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
ad-llm-embeddings-benchmark/: __init__.py  benchmarking.py  leaderboard.py  main.py  results.py  vectorizers.py  visualization.py
ad-llm-embeddings-benchmark/data/: GERAS_II_dict.csv  GERAS_I_dict.csv
ad-llm-embeddings-benchmark/results/: AllMiniLM_GERAS-J_matching_info.csv  GERAS-II_matching_info.csv  GERAS-I_matching_info.csv  GERAS-J_matching_info.csv  GERAS-US_matching_info.csv  LinqEmbedMistral_GERAS-II_matching_info.csv  LinqEmbedMistral_GERAS-I_matching_info.csv  LinqEmbedMistral_GERAS-US_matching_info.csv  OpenAI_GERAS-II_matching_info.csv  OpenAI_GERAS-I_matching_info.csv  OpenAI_GERAS-J_matching_info.csv  OpenAI_GERAS-US_matching_info.csv  OpenAI_PREVENT Dementia_matching_info.csv  PREVENT Dementia_matching_info.csv  Qwen38B_GERAS-II_matching_info.csv  Qwen38B_GERAS-US_matching_info.csv
adhteb/: __init__.py  benchmarking.py  leaderboard.py  main.py  results.py  vectorizers.py  visualization.py
adhteb/data/: A4_dict.csv  AD_CDM_JPAD.csv  AIBL_dict.csv  EMIF_dict.csv  GERAS_J_dict.csv  GERAS_US_dict.csv  PREVENT_AD_dict.csv  PREVENT_DEMENTIA_dict.csv
adhteb/results/: AllMiniLM.pkl  AllMiniLM_GERAS-II_matching_info.csv  AllMiniLM_GERAS-I_matching_info.csv  AllMiniLM_GERAS-US_matching_info.csv  (+28 more)
results/: AllMiniLM_EMIF_matching_info.csv  AllMiniLM_GERAS-II_matching_info.csv  AllMiniLM_GERAS-J_matching_info.csv  AllMiniLM_GERAS-US_matching_info.csv  LinqEmbedMistral_A4_matching_info.csv  LinqEmbedMistral_AIBL_matching_info.csv  LinqEmbedMistral_EMIF_matching_info.csv  LinqEmbedMistral_GERAS-II_matching_info.csv  LinqEmbedMistral_GERAS-I_matching_info.csv  LinqEmbedMistral_GERAS-US_matching_info.csv  LinqEmbedMistral_PREVENT-AD_matching_info.csv  Qwen38B_EMIF_matching_info.csv  Qwen38B_GERAS-II_matching_info.csv  Qwen38B_GERAS-I_matching_info.csv  Qwen38B_GERAS-US_matching_info.csv  Qwen38B_PREVENT-AD_matching_info.csv
tests/: test_benchmark.py
